This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/18/25: Fixed crash if variable not defined in FindSubstring (In 4.2).

12/11/25: Stopped limiting bidirectional series angles by maximum angle minus
backlash (In 4.2).

12/8/25: Made "OpenDialog Multigrid" open Navigator and avoid crash (In 4.2).

12/4/25: Fixed min size slider's text box in Autocontouring dialog (In 4.2).

12/4/25: Prevented trying to create frame directory when SerialEM is not
running on DE server computer (In 4.2).

12/3/25: SEM_4-2-13
12/3/25: Fixed setting of frame-saving subdirectory when SerialEM is not
running on DE server computer (In 4.2).

12/2/25: For JEOL, fixed setting aperture size by index and made Get Names in
multigrid dialog recognize which grid is on the stage (In 4.2).

11/20/25: Fixed SEMCCD plugin crashing DM when first saved raw images from K3
are binned by 2 and from a subarea (In 4.2).

11/20/25: Fixed finishing focus ramp for TVIPS STEM, and requesting more than
one channel in continuous mode for FEI STEM through UTAPI (In 4.2).

11/14/25: Fixed adding grid of point "like last time" not setting items as
Acquire (In 4.2).

11/14/24: Added support for Tietz XF216 camera (In 4.2).

11/14/24: Made Shift to Marker work with groups collapsed if current point is
the only one in the group (In 4.2).

11/11/25: SEM_4-2-12
11/11/25: Fixed ability to enter -1 for compression options to SetFileOptions
(In 4.2).

11/11/25: Fixed crash if camera plugin cannot load, broken 10/13/25. (In 4.2).

11/7/25: Fixed camera setup to show only 3 size buttons for Ceta (In 4.2).

11/6/25: Fixed index numbers in Navigator when items are deleted (In 4.2).

11/6/25: Fixed SetBinning, SetCenteredSize, and SetMontageParams to accept
binning 0.5 in Python (In 4.2).
