@@ -5806,7 +5806,8 @@
              Camera & Script control panel.&nbsp; Acquisition must be either running or 
             paused.&nbsp; Set the optional <b>#</b> to 1 to suppress the popup message about number of items
             acquire and 2 to also allow running a script set to run at the end, which is otherwise
-             skipped.&nbsp; </TD>
+             skipped.&nbsp; A value of 2 will also allow Multiple Grid Operations to proceed to
+             the next grid instead of pausing the multigrid acquisition.</TD>
         </TR>
         <TR>
           <TD class="scriptcommand">SkipMoveInNavAcquire [#]</TD>
